unpackaged/main/default/objects/User/fields/Agent_Signature__c.field-meta.xml
<CustomField>
    <fullName>Agent_Signature__c</fullName>
    <formula>FirstName &amp; &quot; &quot; &amp; LEFT(LastName,1) &amp; &quot;.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Signature</label>
    <type>Text</type>
</CustomField>