unpackaged/main/default/objects/User/fields/icAgentConsole__incCustomScreenpop__c.field-meta.xml
<CustomField>
    <fullName>icAgentConsole__incCustomScreenpop__c</fullName>
    <description>Value of this field to be updated from inContact Agent Console app, use this field to get the value of inContact script variables.</description>
    <label>inContact Custom Screenpop</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>