unpackaged/main/default/objects/User/fields/Personal_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Personal_Queue_ID__c</fullName>
    <label>Personal Queue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>