unpackaged/main/default/objects/User/fields/zkmulti__EncryptedFedExEndUserPassword__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EncryptedFedExEndUserPassword__c</fullName>
    <label>Encrypted FedEx End User Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>