unpackaged/main/default/objects/User/fields/zkmulti__FedExEndUserKey__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__FedExEndUserKey__c</fullName>
    <label>FedEx End User Key</label>
    <length>16</length>
    <type>Text</type>
</CustomField>