unpackaged/main/default/objects/User/fields/zkmulti__FedExEndUserPassword__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__FedExEndUserPassword__c</fullName>
    <label>FedEx End User Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>