unpackaged/main/default/objects/User/fields/zkmulti__FedExRegisteredPreference__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__FedExRegisteredPreference__c</fullName>
    <label>FedEx Registered Preference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>