unpackaged/main/default/objects/User/fields/zkmulti__Registered_Preference__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Registered_Preference__c</fullName>
    <label>Registered Preference</label>
    <length>40</length>
    <type>Text</type>
</CustomField>