unpackaged/main/default/objects/User/fields/zkmulti__UserCredentialsEncrypted__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__UserCredentialsEncrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Credentials Encrypted</label>
    <type>Checkbox</type>
</CustomField>